--- a/.github/workflows/test-macos-zip.yml
+++ b/.github/workflows/test-macos-zip.yml
@@ -13,17 +13,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install p7zip
+        run: brew install p7zip
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           flutter-version: '3.19.6'
 
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+
       - name: Install flutter_distributor
         run: dart pub global activate flutter_distributor
-
-      - name: Install p7zip
-        run: brew install p7zip
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -39,7 +45,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          bash build-macos.sh && flutter build macos
+          bash build-macos.sh && flutter build macos --dart-define-from-file=.env
 
       - name: Install certificates
         env:
@@ -120,3 +126,4 @@ jobs:
             echo "$RUNNER_TEMP/pg-signing.keychain-db"
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
+          rm -f .env
