--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,12 @@ jobs:
           channel: 'stable'
           flutter-version: '3.19.6'
 
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+
       - name: Flutter doctor -v
         run: flutter doctor -v
 
@@ -60,7 +66,7 @@ jobs:
         working-directory: android
 
       - name: Build Apk
-        run: bash build-android.sh && flutter build apk --no-tree-shake-icons --flavor staging
+        run: bash build-android.sh && flutter build apk --no-tree-shake-icons --dart-define-from-file=.env --flavor staging
 
       # Package the build.
       - name: Copy build for Android
@@ -72,6 +78,7 @@ jobs:
         run: |
           rm -f android/app/upload-keystore.jks
           rm -f android/key.properties
+          rm -f .env
 
   aab:
     name: Create appbundle
@@ -88,6 +95,12 @@ jobs:
         with:
           channel: 'stable'
           flutter-version: '3.19.6'
+
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -110,7 +123,7 @@ jobs:
         working-directory: android
 
       - name: Build Appbundle
-        run: bash build-android.sh && flutter build appbundle --no-tree-shake-icons --flavor staging
+        run: bash build-android.sh && flutter build appbundle --no-tree-shake-icons --dart-define-from-file=.env --flavor staging
 
       # Package the build.
       - name: Copy build for Android
@@ -122,6 +135,7 @@ jobs:
         run: |
           rm -f android/app/upload-keystore.jks
           rm -f android/key.properties
+          rm -f .env
 
   ios:
     name: Create ios
@@ -134,6 +148,12 @@ jobs:
         with:
           channel: 'stable'
           flutter-version: '3.19.6'
+
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -159,7 +179,7 @@ jobs:
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           CERTIFICATE_DEV_PATH=$RUNNER_TEMP/build_certificate_dev.p12
           CERT_PATH=$RUNNER_TEMP/ios_distribution.cer
-          CERT_DEV_PATH=$RUNNER_TEMP/development.cer
+          CERT_DEV_PATH=$RUNNER_TEMP/ios_development.cer
           PP_PATH=$RUNNER_TEMP/watermark_assistant_appstore.mobileprovision
           PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_dev.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
@@ -194,7 +214,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd ios && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          bash build-ios.sh && flutter build ipa --export-options-plist=ios/ExportOptions-debug.plist
+          bash build-ios.sh && flutter build ipa --dart-define-from-file=.env --export-options-plist=ios/ExportOptions-debug.plist
 
       # Package the build.
       - name: Copy build for iOS
@@ -209,6 +229,7 @@ jobs:
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
           rm -f ~/Library/MobileDevice/Provisioning\ Profiles/watermark_assistant_*.mobileprovision
+          rm -f .env
 
   macos:
     name: Create macos
@@ -231,6 +252,12 @@ jobs:
           channel: 'stable'
           flutter-version: '3.19.6'
 
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+
       - name: Flutter doctor -v
         run: flutter doctor -v
 
@@ -245,7 +272,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          bash build-macos.sh && flutter build macos
+          bash build-macos.sh && flutter build macos --dart-define-from-file=.env
 
       - name: Install certificates
         env:
@@ -322,3 +349,4 @@ jobs:
             echo "$RUNNER_TEMP/pg-signing.keychain-db"
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
+          rm -f .env
