--- a/.github/workflows/test-snapcraft.yml
+++ b/.github/workflows/test-snapcraft.yml
@@ -35,6 +35,12 @@ jobs:
           channel: 'stable'
           flutter-version: '3.19.6'
 
+      - name: Configure .env
+        run: |
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
+
       - name: Flutter doctor -v
         run: flutter doctor -v
 
@@ -47,8 +53,15 @@ jobs:
 
       - name: Build snap
         run: |
+          # https://snapcraft.io/docs/flutter-applications
+          # TODO: add dart-define-from-file to flutter build linux
           snapcraft --verbose --output picguard.snap
 
       # Package the build.
       - name: Copy build for snap
         run: ls -la *.snap
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
