--- a/.github/workflows/test-windows-exe.yml
+++ b/.github/workflows/test-windows-exe.yml
@@ -77,6 +77,12 @@ jobs:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
         working-directory: dist
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: windows-exe-artifact
+          path: |
+            .\dist\**\*.exe
+
       - name: Clean up
         if: ${{ always() }}
         run: |
