--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1313,9 +1313,19 @@ jobs:
         run: |
           sudo snap install snapcraft --classic
 
-      - name: Build linux
+      - name: Install yq
         run: |
-          flutter build linux --dart-define-from-file=.env --target-platform=linux-x64
+          if ! command -v yq >/dev/null 2>&1; then
+            echo "yq not exists"
+            brew install yq
+          fi
+          yq --version
+
+      - name: Update snapcraft.yaml
+        run: |
+          yq -i '.version = strenv(VERSION)' snap/snapcraft.yaml
+        env:
+          VERSION: ${{ needs.create_release.outputs.version }}
 
       - name: Build snap
         run: |
@@ -1343,6 +1353,7 @@ jobs:
         if: ${{ always() }}
         run: |
           rm -f .env
+          snapcraft clean
 
   msix:
     name: Create msix
