fix: update msix config.
[skip ci]

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,7 +126,7 @@ msix_config:
   display_name: PicGuard
   publisher_display_name: PUBLISHER_NAME_PLACEHOLDER
   identity_name: IDENTITY_NAME_PLACEHOLDER
-  msix_version: 1.0.0.0
+#  msix_version: 1.0.0.0 # If not set, the value of `version` is used
   logo_path: snap\gui\picguard.png
   languages: zh, en
   store: true
