--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -35,7 +35,7 @@ parts:
     # flutter-target: lib/main.dart # The main entry-point file of the application
     build-environment:
       - FLUTTER_REPO: https://github.com/flutter/flutter.git
-      - FLUTTER_CHANNEL: stable
+      - FLUTTER_VERSION: 3.19.6
       - FLUTTER_TARGET: lib/main.dart
       - TARGET_PLATFORM: linux-x64
     override-build: |
@@ -45,7 +45,7 @@ parts:
         echo "$PG_FLUTTER_BUILD_DIR"
         rm -rf $PG_FLUTTER_BUILD_DIR
       fi
-      git clone --depth 1 -b $FLUTTER_CHANNEL $FLUTTER_REPO $PG_FLUTTER_BUILD_DIR
+      git clone --depth 1 -b $FLUTTER_VERSION $FLUTTER_REPO $PG_FLUTTER_BUILD_DIR
       flutter doctor -v
       flutter precache --linux
       flutter pub get
