--- a/.github/workflows/test-snapcraft-arm64.yml
+++ b/.github/workflows/test-snapcraft-arm64.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Update snapcraft.yaml
         run: |
+          yq -i '.parts.picguard.build-environment[1].FLUTTER_VERSION = "3.19.6"' snap/snapcraft.yaml
           yq -i '.parts.picguard.build-environment[3].TARGET_PLATFORM = "linux-arm64"' snap/snapcraft.yaml
 
       - name: Build snap
