--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,20 +28,6 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
-def versioningProperties = new Properties()
-def versioningFile = rootProject.file('versioning.properties')
-if (versioningFile.exists()) {
-    versioningFile.withReader('UTF-8') { reader ->
-        versioningProperties.load(reader)
-    }
-}
-
-def appSuffix = versioningProperties.getProperty('app.suffix')
-def appVersionNameSuffix = ''
-if (appSuffix) {
-    appVersionNameSuffix = "+${appSuffix}"
-}
-
 android {
     namespace "com.kjxbyz.watermarkassistant"
     compileSdkVersion 34
@@ -66,8 +52,8 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 1
         versionName flutterVersionName
+        versionCode flutterVersionCode.toInteger()
     }
 
     flavorDimensions "default"
@@ -75,7 +61,6 @@ android {
         staging {
             dimension "default"
             applicationIdSuffix ".dev"
-            versionNameSuffix appVersionNameSuffix
         }
 
         production {
