--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1006,16 +1006,10 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt update
-          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
           sudo apt install locate libfuse2
           wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
           chmod +x appimagetool && mv appimagetool /usr/local/bin/
-
-      - name: Install GStreamer
-        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
-        run: |
-          sudo apt install -y libunwind-dev
-          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -1082,14 +1076,8 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt update
-          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
           sudo apt install rpm patchelf
-
-      - name: Install GStreamer
-        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
-        run: |
-          sudo apt install -y libunwind-dev
-          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -1161,13 +1149,7 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt update
-          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
-
-      - name: Install GStreamer
-        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
-        run: |
-          sudo apt install -y libunwind-dev
-          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -1234,14 +1216,8 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt update
-          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
           sudo apt install -y p7zip-full p7zip-rar
-
-      - name: Install GStreamer
-        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
-        run: |
-          sudo apt install -y libunwind-dev
-          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -1308,18 +1284,12 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt update
-          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
       - name: Setup LXD
         uses: canonical/setup-lxd@v0.1.1
         with:
           channel: latest/stable
-
-      - name: Install GStreamer
-        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
-        run: |
-          sudo apt install -y libunwind-dev
-          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
