--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_form_builder: ^9.2.1
-  flutter_gen: ^5.4.0
+  flutter_gen: ^5.5.0+1
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.0
@@ -66,11 +66,11 @@ dependencies:
   synchronized: ^3.1.0+1
   url_launcher: ^6.2.6
   uuid: ^4.4.0
-  window_manager: ^0.3.8
+  window_manager: ^0.3.9
 
 dev_dependencies:
   build_runner: ^2.4.9
-  flutter_gen_runner: ^5.4.0
+  flutter_gen_runner: ^5.5.0+1
   flutter_test:
     sdk: flutter
   msix: ^3.16.7
