ci: fix arm64 support for snap
[skip ci]

--- a/.github/workflows/test-snapcraft-arm64.yml
+++ b/.github/workflows/test-snapcraft-arm64.yml
@@ -9,37 +9,24 @@ permissions: read-all
 jobs:
   snap:
     name: Create snap
-    runs-on: warp-ubuntu-latest-arm64-2x
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install dependencies for Linux
-        run: |
-          sudo apt update
-          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-
       - name: Setup LXD
-        uses: canonical/setup-lxd@v0.1.1
+        uses: canonical/setup-lxd
         with:
+          group: lxd
           channel: latest/stable
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          flutter-version: '3.19.6'
+      - name: Add your username to the LXD (lxd) group
+        run: sudo usermod -a -G lxd $(whoami)
 
       - name: Configure .env
         run: |
           echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
-
-      - name: Flutter doctor -v
-        run: flutter doctor -v
-
-      - name: Install flutter dependencies
-        run: flutter pub get
 
       - name: Install snapcraft
         run: |
@@ -55,8 +42,8 @@ jobs:
 
       - name: Update snapcraft.yaml
         run: |
-          yq -i '.parts.picguard.build-environment[1].FLUTTER_VERSION = "3.19.6"' snap/snapcraft.yaml
-          yq -i '.parts.picguard.build-environment[3].TARGET_PLATFORM = "linux-arm64"' snap/snapcraft.yaml
+          rm -f snap/snapcraft.yaml
+          mv snap/snapcraft-arm64.yaml snap/snapcraft.yaml
 
       - name: Build snap
         run: |
