--- a/windows/packaging/exe/make_config.yaml
+++ b/windows/packaging/exe/make_config.yaml
@@ -5,7 +5,7 @@ display_name: PicGuard
 create_desktop_icon: true
 privileges_required: admin
 # launch_at_startup: false
-# setup_icon_file:
+setup_icon_file: SETUP_ICON_FILE_PLACEHOLDER
 # See: https://jrsoftware.org/ishelp/index.php?topic=setup_defaultdirname
 # install_dir_name: "D:\\HELLO-WORLD"
 locales:
